# miniarm_vel

./: .gitignore  CMakeLists.txt  package.xml
MotorUnion/: CMakeLists.txt  MotorUnion.cpp  MotorUnion.h  README.md
MotorUnion/Motor/: CMakeLists.txt  Dmotor.cpp  Dmotor.h  DmotorMx.cpp  DmotorMx.h  DmotorPro.cpp  DmotorPro.h  DmotorProPlus.cpp  DmotorProPlus.h  DmotorXm.cpp  DmotorXm.h
MotorUnion/Motor/dynamixel/: CMakeLists.txt
MotorUnion/Motor/motor/: CMakeLists.txt  motor.cpp  motor.h
include/miniarm_vel/: Manipulator.h
launch/: arm_gripper.launch
src/: Manipulator.cpp  arm_client.cpp  arm_server.cpp  gripper_control_server.cpp  send_position_client.cpp  test_trajectory.cpp
srv/: MoveArm.srv  SendPosition.srv  ServoControl.srv
